@@ -4827,5 +4827,32 @@
       0
     ],
     "price": 1250
+  },
+  {
+    "id": 182,
+    "atypeId": 1,
+    "description": "A tome containing the information\nnecessary to cast \\is[57].",
+    "etypeId": 8,
+    "traits": [
+      {
+        "code": 43,
+        "dataId": 57,
+        "value": 1
+      }
+    ],
+    "iconIndex": 375,
+    "name": "Soul Shackles (Tome)",
+    "note": "<Cannot Rename>",
+    "params": [
+      0,
+      0,
+      0,
+      0,
+      0,
+      0,
+      0,
+      0
+    ],
+    "price": 300
   }
 ]
