@@ -1943,11 +1943,6 @@
         "skillId": 65
       },
       {
-        "level": 20,
-        "note": "Alpha 14",
-        "skillId": 57
-      },
-      {
         "level": 22,
         "note": "Alpha 15",
         "skillId": 87
