@@ -2137,7 +2137,7 @@
     ],
     "gold": 900,
     "name": "Vessel of the Forgotten General",
-    "note": "<Passive State: 57, 141>\n\n<Sideview Battler: Evil1_6>\n<Weapon Image: 242>\n<Attack Animation: 126>\n<HP Gauge Width: 288>\n\n<Boost Skill 60: Full>\n<AI Priority>\nTurn < 3 +++ State !== State 48: Skill 57, Highest MaxHP\n\nState !== Magic Enhance +++ User HP% param >= 30%: Magic Enhance, User\n\nState === Exposed Weak Point +++ User HP% param >= 30%: Purify, User\n</AI Priority>\n\n<Enemy Drops>\nForgotten General's Resistance: 100%\nForgotten General's Helmet: 100%\nSoulstealer's Necklace: 100%\nDark Essence: 100%\nDark Essence: 100%\nDark Essence: 100%\nMalicious Essence: 100%\nMalicious Essence: 100%\nMalicious Essence: 100%\nMalicious Essence: 100%\nMalicious Essence: 100%\n</Enemy Drops>",
+    "note": "<Passive State: 57, 141>\n\n<Sideview Battler: Evil1_6>\n<Weapon Image: 242>\n<Attack Animation: 126>\n<HP Gauge Width: 288>\n\n<Boost Skill 60: Full>\n<AI Priority>\nTurn < 3 +++ State !== State 48: Skill 57, Highest MaxHP\n\nState !== Magic Enhance +++ User HP% param >= 30%: Magic Enhance, User\n\nState === Exposed Weak Point +++ User HP% param >= 30%: Purify, User\n</AI Priority>\n\n<Enemy Drops>\nForgotten General's Resistance: 100%\nForgotten General's Helmet: 100%\nSoulstealer's Necklace: 100%\nSoul Shackles (Tome): 100%\nDark Essence: 100%\nDark Essence: 100%\nDark Essence: 100%\nMalicious Essence: 100%\nMalicious Essence: 100%\nMalicious Essence: 100%\nMalicious Essence: 100%\nMalicious Essence: 100%\n</Enemy Drops>",
     "params": [
       12000,
       9999,
