@@ -4636,6 +4636,13 @@
               ]
             },
             {
+              "code": 655,
+              "indent": 1,
+              "parameters": [
+                "$gameTemp._adventurersGuild.push([2, 182, 1, 5000]);"
+              ]
+            },
+            {
               "code": 0,
               "indent": 1,
               "parameters": []
