@@ -158,7 +158,7 @@ Additions:
    > [REDACTED HELMET]
    > [REDACTED TEAR]
    > [REDACTED WING]
- - Added 93 new equipment items:
+ - Added 94 new equipment items:
   ~ 17 weapons:
    > Steel Knuckles
    > Shadowspec Sword
@@ -243,7 +243,7 @@ Additions:
    > Seshat's Teachings
    > Seshat's Opus
    > EXP Supressor
-  ~ 9 magic equips:
+  ~ 10 magic equips:
    > Comet Charm
    > Magic Coin
    > Elemental Lace
@@ -253,6 +253,7 @@ Additions:
    > Dark Orb (Tome)
    > Ice II (Tome)
    > Wyvern's Fury (Tome)
+   > Soul Shackles (Tome)
   ~ 3 powers:
    > [REDACTED RESISTANCE]
    > [REDACTED WISDOM]
@@ -376,6 +377,7 @@ Skill Balancing:
   ~ Magic Resistance/Proneness now learned by Player 1 at level 16 (was originally learned by Player 2 at level 15).
   ~ Shield Break now learned by Player 4 at level 18 (was originally learned by Player 1 at level 16).
   ~ Cut Down now learned by Player 1 by equipping an axe (was originally learned at level 11).
+  ~ Soul Shackles now learned by equipping its tome (was originally learned by Player 3 at level 20).
   ~ Sharpen Dagger now learned by Player 4 by equipping a dagger (was originally learned at level 3).
  - Using BP with Revival now increases success rate (used to increase the amount of HP recovered on a successful revive).
  - Wand Impulse and Backstab apply a new state called Recovery.
